Fix wrapping in infos

--- a/mm-jsr.css
+++ b/mm-jsr.css
@@ -56,6 +56,7 @@
     padding: 3px 10px;
     border-radius: 3px;
     background: #444;
+    white-space: nowrap;
 }
 
 .jsr_info--min
